Delete Actix app files and related test configurations.
This commit removes the entire Actix app implementation, including `device.rs`, `main.rs`, and `routes.rs`, as well as the `Cargo.lock` file. Additionally, it deletes Kubernetes test configuration files (`0-config.yaml`, `1-tls.yaml`, `2-nginx-client.yaml`, `3-traefik-client.yaml`), which were used for testing the application. This cleanup indicates the discontinuation or migration of the Actix-based project.

--- a/myapp/grpc.service
+++ b/myapp/grpc.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Traefik
+Description=My App
 Wants=network-online.target
 After=network-online.target
 
@@ -12,7 +12,7 @@ Group=root
 Type=simple
 Restart=on-failure
 RestartSec=5s
-ExecStart=/usr/local/bin/traefik --configfile /etc/traefik/traefik.yml
+ExecStart=/usr/local/bin/grpc
 
 [Install]
 WantedBy=multi-user.target
