--- a/nginx/myapp.conf
+++ b/nginx/myapp.conf
@@ -1,25 +1,32 @@
-upstream myapp {
-    server api-nginx-0.antonputra.pvt:8080;
-    server api-nginx-1.antonputra.pvt:8080;
-    server api-nginx-2.antonputra.pvt:8080;
-    server api-nginx-3.antonputra.pvt:8080;
-    keepalive 64;
+server {
+    listen 80;
+    server_name api.nginx.antonputra.pvt;
+
+    location / {
+        proxy_pass http://10.0.32.200:8080/;
+    }
 }
 
 server {
-    listen 443 ssl;
-    server_name api-nginx.antonputra.pvt;
-    http2 on;
+    listen 443 ssl http2;
+    server_name api.nginx.antonputra.pvt;
 
-    ssl_certificate /etc/ssl/certs/nginx-antonputra-pvt.pem;
-    ssl_certificate_key /etc/ssl/private/nginx-antonputra-pvt-key.pem;
+    ssl_certificate /etc/ssl/certs/nginx-antonputra-pvt.cert;
+    ssl_certificate_key /etc/ssl/private/nginx-antonputra-pvt.cert;
 
     location / {
-        proxy_pass http://myapp/;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Host \$host;
-        proxy_set_header X-Forwarded-Proto \$scheme;
+        proxy_pass http://10.0.32.200:8080/;
+    }
+}
+
+server {
+    listen 8443 ssl http2;
+    server_name grpc.nginx.antonputra.pvt;
+
+    ssl_certificate /etc/ssl/certs/nginx-antonputra-pvt.cert;
+    ssl_certificate_key /etc/ssl/private/nginx-antonputra-pvt.cert;
+
+    location / {
+        grpc_pass 10.0.32.200:8082;
     }
 }
