--- a/nginx/prometheus-nginx-exporter.service
+++ b/nginx/prometheus-nginx-exporter.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Traefik
+Description=Nginx Prometheus Exporter
 Wants=network-online.target
 After=network-online.target
 
@@ -12,7 +12,7 @@ Group=root
 Type=simple
 Restart=on-failure
 RestartSec=5s
-ExecStart=/usr/local/bin/traefik --configfile /etc/traefik/traefik.yml
+ExecStart=/usr/local/bin/prometheus-nginx-exporter
 
 [Install]
 WantedBy=multi-user.target
